fix examples and configs

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
 # .env.example, commit to repo
+# PRODUCTION ENVIRONMENTS
+
+PD_USERNAME=
+PD_PASSWORD=
+PD_DATABASE=
+PD_HOST=
+
+# DEVELOPMENT ENVIRONMENTS
+
+DEV_USERNAME=
+DEV_PASSWORD=
+DEV_DATABASE=
+DEV_HOST=
+
+# ENCRYPT CONFIGS
+
+ALGORITHM=aes256
+SECRET=
